--- a/refs.bib
+++ b/refs.bib
@@ -5439,6 +5439,7 @@ year={2016},
 	publisher={SIAM}
 }
 
+
 @inproceedings{arora2012practical,
 title={A practical algorithm for topic modeling with provable guarantees},
 author={Arora, Sanjeev and Ge, Rong and Halpern, Yonatan and Mimno, David and Moitra, Ankur and Sontag, David and Wu, Yichen and Zhu, Michael},
@@ -6427,4 +6428,29 @@ year = {2014}
   author={Nguyen, Tri and Fu, Xiao and Wu, Ruiyuan},
   journal={arXiv preprint arXiv:2109.11135},
   year={2021}
+}
+
+@article{lei2015consistency,
+author={Lei, Jing and Rinaldo, Alessandro},
+title = {{Consistency of spectral clustering in stochastic block models}},
+volume = {43},
+journal = {The Annals of Statistics},
+number = {1},
+publisher = {Institute of Mathematical Statistics},
+pages = {215 -- 237},
+keywords = {network data, Sparsity, spectral clustering, Stochastic block model},
+year = {2015},
+doi = {10.1214/14-AOS1274},
+URL = {https://doi.org/10.1214/14-AOS1274}
+}
+
+@article{arora2016computing,
+author = {Arora, Sanjeev and Ge, Rong and Kannan, Ravi and Moitra, Ankur},
+title = {Computing a Nonnegative Matrix Factorization---Provably},
+journal = {SIAM Journal on Computing},
+volume = {45},
+number = {4},
+pages = {1582-1611},
+year = {2016},
+doi = {10.1137/130913869},
 }
